--- a/index.html
+++ b/index.html
@@ -17,16 +17,23 @@
 <body>
 
 
+<fieldset>
+    <p>Tablas</p>
+    <label for="">¿Que tabla desea generar?:</label>
+    <input type="text" id="numero">
+    <br><br>
+    <input type="button" onclick="Generar();" value="Multiplicar">
+
+    <br><br><div id="respuesta">
+</div>
+</fieldset>
 
 
 
 
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.2.0/js/bootstrap.min.js"></script>
 
 
-
-<script src="js/app.js"></script>
+<script src="./js/app.js"></script>
 </body>
 </html>
