--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css">
+
+    <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css">
 
 
@@ -17,7 +18,19 @@
 <body>
 
 
-<fieldset>
+<header class="header">
+    <h2 class="tittle">Simulador interactivo</h2>
+</header>
+
+<section>
+
+</section>
+
+<footer>
+
+</footer>
+
+<!--<fieldset>
     <p>Tablas</p>
     <label for="">¿Que tabla desea generar?:</label>
     <input type="text" id="numero">
@@ -26,8 +39,7 @@
 
     <br><br><div id="respuesta">
 </div>
-</fieldset>
-
+</fieldset>-->
 
 
 
@@ -35,5 +47,6 @@
 
 
 <script src="./js/app.js"></script>
+
 </body>
 </html>
